--- a/_examples/example.ipynb
+++ b/_examples/example.ipynb
@@ -164,12 +164,30 @@
     "\n",
     "# init optimizer, adam is used here\n",
     "optimizer = torch.optim.Adam(net.parameters(), lr=learning_rate)\n",
-    "\n",
+    "# {method: weight}\n",
     "# set loss functions {method_1: weight_1, method_2: weight_2, ...}\n",
     "loss_function = {LF.CrossEntropy(): 0.5, LF.SoftDice(): 0.5}\n",
-    "\n",
     "# init the model, #TODO: more details see modelnet/model\n",
     "model = SegModel(net, optimizer, img_suffix, lab_suffix, dropout_rate=dropout_rate, loss_functions=loss_function)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from snmi.models import SegModel\n",
+    "from snmi.nets.unet2D import Unet2D\n",
+    "from snmi.utils import loss_fuctions as LF\n",
+    "\n",
+    "net = Unet2D(n_classes=2, in_channels=3)\n",
+    "optimizer = torch.optim.Adam(net.parameters(), lr=learning_rate)\n",
+    "# loss functions {method_1: weight_1, method_2: weight_2, ...}\n",
+    "loss_function = {LF.CrossEntropy(): 0.5, LF.SoftDice(): 0.5}\n",
+    "model = SegModel(net, optimizer, img_suffix, lab_suffix, \n",
+    "                dropout_rate=dropout_rate, \n",
+    "                loss_functions=loss_function)"
    ]
   },
   {
@@ -188,7 +206,7 @@
     "from snmi.core import Trainer\n",
     "\n",
     "# hyper-parameters\n",
-    "epochs = 10\n",
+    "epochs = 5\n",
     "output_path = './results/seg2D_example/'\n",
     "log_train_image = False\n",
     "log_validation_image = True"
